samples/_failures_safe/1761648059_912c12_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bf079a74.c: In function ‘main’:
./samples/SAFE/__tmp_bf079a74.c:142:13: error: expected expression at end of input
  142 |             printf("%s [%s] %s\n", entries[i].timestamp,
      |             ^~~~~~
./samples/SAFE/__tmp_bf079a74.c:142:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bf079a74.c:142:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bf079a74.c:142:13: error: expected declaration or statement at end of input
